noinst_LTLIBRARIES=libknowledge.la

libknowledge_la_SOURCES=chromosome.cpp \
	def.cpp \
	genegenemodel.cpp \
	genegenemodelarchive.cpp \
	groupmanager.cpp \
	groupmanagerdb.cpp \
	region.cpp \
	regioncontainer.cpp \
	regionmanager.cpp \
	regionmanagerdb.cpp \
	snpdataset.cpp \
	snpsnpmodel.cpp \
	chromosome.h \
	genegenemodel.h \
	genegenemodelarchive.h \
	groupmanager.h \
	groupmanagerdb.h \
	region.h \
	regioncontainer.h \
	regionmanager.h \
	regionmanagerdb.h \
	snpdataset.h \
	snpsnpmodel.h \
	biomodel.h \
	biomodel.cpp \
	group.h \
	def.h \
	RegionCollection.h \
	RegionCollection.cpp \
	RegionCollectionSQLite.h \
	RegionCollectionSQLite.cpp \
	Region.h \
	Region.cpp \
	Allele.h \
	Allele.cpp \
	Locus.h \
	Locus.cpp \
	Group.h \
	Group.cpp \
	GroupCollection.h \
	GroupCollection.cpp \
	GroupCollectionSQLite.h \
	GroupCollectionSQLite.cpp
	
	
AM_CPPFLAGS=-I$(top_srcdir)/src

libknowledge_la_LIBADD=$(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
