lib_LTLIBRARIES=libvcftools.la

libvcftools_la_SOURCES=vcf_file.cpp vcf_entry.cpp \
	vcf_entry_getters.cpp vcf_entry_setters.cpp \
	vcf_file_filters.cpp vcf_file_output.cpp \
	vcf_file_format_convert.cpp \
        vcf_file_diff.cpp output_log.cpp \
        dgeev.h vcf_file.h vcf_entry.h output_log.h parameters.h

libvcftools_la_LIBADD=-lz
